style: Adjust component styles for improved layout and visual consistency; modify margins and paddings across multiple components fix: Update Navbar scroll offset calculations for enhanced section visibility

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@ $primary-color: #86C232;
 
 .partial-component {
   max-width: 1280px;
-  margin: 3rem auto 2rem auto !important;
+  margin: 3rem auto 1rem auto;
   padding: 2rem 2rem 0.5rem 2rem;
   text-align: center;
   overflow-x: hidden;
