--- a/src/components/abous-us/about-us.styles.scss
+++ b/src/components/abous-us/about-us.styles.scss
@@ -13,7 +13,8 @@ $button-text-color: #2a2a3b;
 
 .about-box {
   color: $text-color;
-  padding: 2.5rem;
+  padding: 2rem 2.5rem;
+  margin-top: 1rem;
   font-family: Arial, sans-serif;
   opacity: 0;
   transform: translateY(30px);
@@ -29,7 +30,7 @@ $button-text-color: #2a2a3b;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 2.5rem 0;
+    padding: 1.5rem 0;
 
     .about-hero-content {
       max-width: 50%;
