--- a/src/components/contact-us/contact-us.styles.scss
+++ b/src/components/contact-us/contact-us.styles.scss
@@ -11,8 +11,8 @@ $button-hover-color: #61892F;
 $button-text-color: #f2f2f2;
 
 .contact-us {
-  padding: 4rem;
-  margin: 5rem auto;
+  padding: 2rem;
+  margin: 2rem auto;
   background-color: $background-color;
   color: $text-color;
   opacity: 0;
